<resources>
    <string name="app_name">Command Plus</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle">comandaeletronica@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cardapio">Cardapio</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_mesas">Mesas</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_exit">Sair</string>
    <string name="menu_perfil">Configurações</string>
    <string name="menu_categoria">Categorias Cardápio</string>
    <string name="menu_comanda">Comanda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Minhas strings -->
    <string name="text_boas_vindas">
        Abandone a comanda em papel, use o Comanda Plus.
        Facilite sua vida e também ajude o meio ambiente.\n
        Vamos aproveite!!!
    </string>
    <string name="text_titulo_intro2">
        Crie sua conta gratís
    </string>
    <string name="text_subtitulo_intro2">
        Junte-se a nós, faça o seu cadastro.
    </string>

    <!-- Strings de tela de cadastro do cardápio -->
    <string name="titulo_cardapio"> Cadastre um item </string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_cliente2">Cliente2Activity</string>

    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">
        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>
        <item name="DialogTitleText">Updating…</item>
        <item name="DialogSpotColor">@android:color/holo_orange_dark</item>
        <item name="DialogSpotCount">4</item>
    </style>
</resources>
