<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.comandaelotrnica.ui.home.HomeFragment"
        android:label="@string/menu_home"

        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.comandaelotrnica.ui.clientes.ClienteFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_cardapio"
        android:name="com.example.comandaelotrnica.ui.cardapio.CardapioFragment"
        android:label="@string/menu_cardapio"
        tools:layout="@layout/fragment_cardapio" />

    <fragment
        android:id="@+id/nav_mesas"
        android:name="com.example.comandaelotrnica.ui.mesas.MesasFragment"
        android:label="@string/menu_mesas"
        tools:layout="@layout/fragment_mesas" />
    <fragment
        android:id="@+id/nav_categoria"
        android:name="com.example.comandaelotrnica.ui.categoria.CategoriaFragment"
        android:label="@string/menu_categoria"
        tools:layout="@layout/fragment_categoria"/>
    <fragment
        android:id="@+id/nav_comanda"
        android:name="com.example.comandaelotrnica.ui.comanda.ComandaFragment"
        android:label="@string/menu_comanda"
        tools:layout="@layout/fragment_comanda"/>


</navigation>